--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -14,4 +14,4 @@ jobs:
       - uses: actions/checkout@v2
       - uses: DeKal/github-activity-readme@v1.0.2
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.README_ACTIVITY_PRIVATE_EVENTS }}
